# vrbdecode-peerreview

./: .gitignore  EXPORT_METADATA.txt  README.md  REPRODUCIBILITY.md  REVIEWER_NOTE.md  TESTING.md  ci.sh
eval/: plot_wrap_baselines.py  run_comparison_table.py  run_constraint_breakdown.py  run_ict_express.py  run_ict_express_wrap_baselines.py  run_submission.py
eval/archive/: README.md
eval/artifacts/: README.md
eval/chain/: PURECHAIN.md  probe_precompile_gas_anvil.py  purechain.env.example  verify_anvil.py  verify_groth16_anvil.py  verify_purechain_groth16.py  verify_purechain_wrapped.py
repro/: expected_constants.json
scripts/: check_repro_invariants.py  export_peerreview_repo.sh  install_foundry.sh  reproduce_ict_express.sh
spec/: DecodingSpec_v1.md  PublicInputsSpec_v1.md  ReceiptSpec_v1.md
vrbdecode-zk/: Cargo.toml
vrbdecode-zk/src/: cache.rs  lib.rs  protocol.rs  step_circuit.rs
vrbdecode-zk/tests/: anvil_e2e_acceptance.rs  decider_eth_circuit_trace.rs  decider_eth_wrap_acceptance.rs  fcircuit_semantics.rs  groth16_smoke.rs  pipeline_smoke.rs  precompile_gas_acceptance.rs  r1cs_vectors.rs  sonobe_nova_step_ivc.rs
