[package]
name = "vrbdecode-zk"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-std = "0.5"
ark-relations = "0.5"
ark-r1cs-std = "0.5"
ark-groth16 = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["sponge", "constraints", "crh"] }
ark-serialize = "0.5"
ark-grumpkin = "0.5"
folding-schemes = { path = "../third_party/sonobe/folding-schemes" }
solidity-verifiers = { path = "../third_party/sonobe/solidity-verifiers" }
vrbdecode-core = { path = "../vrbdecode-core" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
serde_json = "1.0"

[[bin]]
name = "bench_step"
path = "src/bin/bench_step.rs"

[[bin]]
name = "bench_nova"
path = "src/bin/bench_nova.rs"

[[bin]]
name = "decider_evm"
path = "src/bin/decider_evm.rs"
